[package]
name = "thumbor"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.2" # web server
anyhow = "1" # error handling
base64 = "0.13"
bytes = "1"
image = "0.23"
lazy_static = "1" # process static variables by Marco
lru = "0.6"
percent-encoding = "2" # url encoding/decoding
photon-rs = "0.3" # image effect
prost = "0.8" # protobuf processing
reqwest = "0.11" # http client
serde = { version = "1", features=["derive"] } # serialize/deserialize
tokio = { version = "1", features=["full"] } # async
tower = { version = "0.4", features=["util", "timeout", "load-shed", "limit", ] } # service middleware
tower-http = { version = "0.1", features=["add-extension", "compression-full", "trace"]} # http middleware
tracing = "0.1" # log
tracing-subscriber = "0.2" # log

[build-dependencies]
prost-build = "0.8" # compile protobuf